--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,8 @@
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
+        <hibernate.version>5.6.9.Final</hibernate.version>
+        <spring.version>5.3.21</spring.version>
     </properties>
 
 </project>
